--- a/ClientePDT/.classpath
+++ b/ClientePDT/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/PDT"/>
-	<classpathentry kind="lib" path="/home/sebastian/Downloads/Varios/hibernate-core-5.0.3.Final.jar"/>
-	<classpathentry kind="lib" path="/home/sebastian/wildfly-10.0.0.Final/bin/client/jboss-client.jar"/>
+	<classpathentry kind="lib" path="C:/Users/sguad/eclipse-workspace/lib/hibernate-core-5.0.3.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/sguad/eclipse-workspace/wildfly-10.1.0.Final/bin/client/jboss-client.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
