--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
-*.class
+# Eclipse IDE: Archivos de configuracion
+.classpath
+.project
+.settings/
+ 
+# Maven: Archivos compilados
+target/
+ 
+# Netbeans: Archivos de configuracion
+nbactions.xml
