se agregan mas exlucsioensç

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,6 @@
 .project
 .settings/
  
-# Maven: Archivos compilados
-target/
- 
-# Netbeans: Archivos de configuracion
-nbactions.xml
+#Java
+.class
+bin/
